# PFE_Optimisation_scan_3D

./: README.md  octomap_server.cpp  octomap_server.hpp
bunker-simulation/: docker-compose.yml
bunker-simulation/gazebo/src/pol_bunker/: setup.py
bunker-simulation/gazebo/src/pol_bunker/launch/: bunker-sim2.launch.py
bunker-simulation/gazebo/src/pol_bunker/urdf/: macro-roue.xacro  simulation.world
bunker-simulation/teleop/config/: terminator_config
bunker-simulation/teleop/scripts/: start_drone_driver.sh
map/: docker-compose.yml  ply-api.postman_collection.json
map/db/: init.sql
map/db/data/: postmaster.opts
map/db/data/base/1/: 1259  2619  2696  2840  2841
map/db/data/base/16384/: 1247  1247_fsm  (+44 more)
map/db/data/global/: 1260  1262  2671  pg_control  pg_internal.init
map/db/data/pg_stat/: pg_stat_statements.stat  pgstat.stat
map/ply-api/: Dockerfile  app.py
map/ply-crawler/: Dockerfile  app.py  generator.py  requirements.txt
map/test/: generate-ply-from-db.py  insert-plane-in-db.py
pointcloud2map/: .gitignore  README.md  docker-compose.yml
pointcloud2map/middleware/: Dockerfile  requirements.txt
pointcloud2map/middleware/src/pol_db_management/: package.xml  setup.cfg  setup.py
pointcloud2map/middleware/src/pol_msgs/: CMakeLists.txt  package.xml
pointcloud2map/middleware/src/pol_spatial_data_middleware/: package.xml  setup.cfg  setup.py
pointcloud2map/middleware/src/pol_spatial_data_middleware/pol_spatial_data_middleware/: middleware.py  test_data_size.py
pointcloud2map/middleware/src/pol_spatial_data_types/: package.xml  setup.cfg  setup.py
pointcloud2map/middleware/src/pol_spatial_data_types/pol_spatial_data_types/: ColorRGBANormalized.py  SpatialData.py  SpatialData_DB_Connector.py  SpatialPoint.py
pointcloud2map/octomap/: Dockerfile
pointcloud2map/octomap/scripts/: create_color_octomap_server_launchfile.sh  start_octomap.sh  start_octomap_mapping_server.sh  test_bw.py
pointcloud2map/octomap/scripts/install/: local_setup.sh  setup.sh
pointcloud2map/octomap/scripts/log/: latest_build
pointcloud2map/octomap/src/octomap_ros/: package.xml
(+11 files in other folders)
