<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pol_spatial_data_middleware</name>
  <version>0.0.1</version>
  <description>Middleware written in Python that converts and store spatial data from ROS messages
    to a database</description>
  <maintainer email="valentin.racaud-minuzzi@etu.umontpellier.fr">Polytech Montpellier</maintainer>
  <license>GNU General Public License version 3</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>pol_spatial_data_types</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>