<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pol_spatial_data_types</name>
  <version>0.0.1</version>
  <description>Definition of types used in pol_spatial_data packages</description>
  <maintainer email="valentin.racaud-minuzzi@etu.umontpellier.fr">Polytech Montpellier</maintainer>
  <license>GNU General Public License version 3</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>pol_db_management</exec_depend>
  <exec_depend>psycopg2</exec_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>